--- a/config/.config/waybar/style.css
+++ b/config/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: Inter,'Font Awesome 15', Helvetica, Arial, sans-serif;
+    font-family: 'Inter';
     font-size: 14px;
     min-height: 0;
 }
@@ -77,12 +77,6 @@ window#waybar.hidden {
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-}
-
-#network {
-    margin: 0 0 0 10px;
-    padding:  0 20px 0 20px;
-    border-radius: 20px;
 }
 
 #language {
