--- a/config/.config/swaync/style.css
+++ b/config/.config/swaync/style.css
@@ -1,7 +1,3 @@
-/*
- * vim: ft=less
- */
-
 @define-color noti-border-color rgba(255, 255, 255, 0.15);
 @define-color noti-bg #2E3440;
 @define-color noti-bg-alt #383E4A;
@@ -15,7 +11,10 @@
 @define-color bg-selected rgb(0, 128, 255);
 
 *{
-  color: @noti-fg;
+    color: @noti-fg;
+    font-family: "Inter", "Font Awesome";
+    font-size: 20px;
+
 }
 
 .notification-row {
@@ -35,17 +34,17 @@
   padding: 0;
 }
 
- .low {
-  background: yellow;
-  padding: 6px;
-  border-radius: 12px;
-}
+/*  .low { */
+/*   background: yellow; */
+/*   padding: 6px; */
+/*   border-radius: 12px; */
+/* } */
 
-.normal {
-  background: green;
-  padding: 6px;
-  border-radius: 12px;
-}
+/* .normal { */
+/*   background: green; */
+/*   padding: 6px; */
+/*   border-radius: 12px; */
+/* } */
 
 .critical {
   background: @noti-urgent;
@@ -57,6 +56,7 @@
 .notification-content {
   background: transparent;
   padding: 6px;
+  margin: 2px 2px 2px 20px;
   border-radius: 12px;
 }
 
@@ -66,8 +66,8 @@
   text-shadow: none;
   padding: 0;
   border-radius: 100%;
-  margin-top: 10px;
-  margin-right: 16px;
+  margin-top: 15px;
+  margin-right: 20px;
   box-shadow: none;
   border: none;
   min-width: 24px;
@@ -264,33 +264,18 @@
 
 .widget-backlight {
   background-color: @noti-bg;
-  padding: 8px 8px 4px 8px;
-  margin: 8px 8px 0px 8px;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  padding: 4px 8px 8px 8px;
+  margin: 10px 8px 8px 8px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 .KB {
-  padding: 4px 8px 4px 8px;
-  margin: 0px 8px 0px 8px;
-  border-radius: 0;
-}
-
-.power-buttons{
   background-color: @noti-bg;
-  padding: 8px;
-  margin: 8px;
-  border-radius: 12px;
-}
-
-
-.power-buttons>button {
-  background: transparent;
-  border: none;
-}
-
-.power-buttons>button:hover {
-  background: @noti-bg-hover;
+  padding: 4px 8px 8px 8px;
+  margin: 0px 8px 8px 8px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 .widget-menubar>box>.menu-button-bar>button{
@@ -318,20 +303,3 @@
 .widget-buttons-grid>flowbox>flowboxchild>button:hover {
   background: @noti-bg-hover;
 }
-
-.powermode-buttons{
-  background-color: @noti-bg;
-  padding: 8px;
-  margin: 8px;
-  border-radius: 12px;
-}
-
-.powermode-buttons>button {
-  background: transparent;
-  border: none;
-}
-
-.powermode-buttons>button:hover {
-  background: @noti-bg-hover;
-}
-
